templates/classification_template.yaml
---
# Source: classification/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-classification
  labels:
    helm.sh/chart: classification-4.14.0
    app.kubernetes.io/name: classification
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "ad60447d1733473e30ab0a3ba53d58141cc1d250"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: classification
    app.kubernetes.io/instance: release-name
---
# Source: classification/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-classification
  labels:
    helm.sh/chart: classification-4.14.0
    app.kubernetes.io/name: classification
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "ad60447d1733473e30ab0a3ba53d58141cc1d250"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: classification
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: classification
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-classification
      securityContext:
        fsGroup: 65534
      containers:
        - name: classification
          securityContext:
            {}
          image: "signalen/classification:ad60447d1733473e30ab0a3ba53d58141cc1d250"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            {}
          volumeMounts:
            - name: models
              mountPath: /models
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: release-name-classification
---
# Source: classification/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-classification
  labels:
    helm.sh/chart: classification-4.14.0
    app.kubernetes.io/name: classification
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "ad60447d1733473e30ab0a3ba53d58141cc1d250"
    app.kubernetes.io/managed-by: Helm
spec:
  tls:
    - hosts:
        - "classification.signals.local"
      secretName: classification-tls
  rules:
    - host: "classification.signals.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-classification
                port:
                  number: 80
